fixing padding so header is not cut off

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html {
 
 @media screen and (max-width: 500px) {
     html {
-        font-size: clamp(0.4rem, 4.8vmin, 2.5em);
+        font-size: clamp(0.4rem, 4.75vw, 2.5em);
     }
 }
 
@@ -72,10 +72,11 @@ a.exit:active {
 .page {
     visibility: hidden;
     position: absolute;
+    margin-top: .5em;
+    padding-top: .5em;
 
     max-width: 100%;
     max-height: 100%;
-    margin-top: 1em;
     overflow: hidden;
 }
 
